--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>Metabolic route comparer kegg</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
+<body bgcolor="#AAA">
   <div id="main"></div>
   <script src="./App.tsx"></script>
 </body>
